# tulipindicators

./: CMakeLists.txt  indicators.c
